--- a/vmWareSampleApp/src/app/data-display/data-display.component.html
+++ b/vmWareSampleApp/src/app/data-display/data-display.component.html
@@ -1,2 +1,13 @@
-<p>data-display works!</p>
+<div class="container">
+    <div class="card">
+        <div>
+            <strong>field 1: </strong> {{formData?.field1.value}}
+        </div>
+        <div>
+            <strong>field 2: </strong> {{formData?.field2.value}}
+        </div>
+    </div>
+</div>
+
+
 
